[gd_scene load_steps=7 format=3 uid="uid://dmfbkxe52mhcn"]

[ext_resource type="Script" uid="uid://bv7kh2ofiih3t" path="res://Scripts/GUI/MainMenu.gd" id="1_ocgay"]
[ext_resource type="Texture2D" uid="uid://d4f62p6edq0ld" path="res://Assets/title.png" id="2_6d82g"]
[ext_resource type="Texture2D" uid="uid://b6ml2ofd7iwi8" path="res://Assets/Elements/fire.png" id="3_dkd36"]
[ext_resource type="Texture2D" uid="uid://cnu1e2ti2ywos" path="res://Assets/Elements/water.png" id="4_ha2rd"]
[ext_resource type="Texture2D" uid="uid://hw2jiubd6fbq" path="res://Assets/Elements/earth.png" id="5_wdeli"]
[ext_resource type="Texture2D" uid="uid://bh5g48w1u1mdy" path="res://Assets/Elements/air.png" id="6_wyv1s"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("main_container", "level_select_container", "back_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 3
script = ExtResource("1_ocgay")
main_container = NodePath("VBoxContainer")
level_select_container = NodePath("LevelSelectContainer")
back_button = NodePath("MarginContainer/BackButton")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.615582, 0.354781, 0.0703993, 1)

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -549.5
offset_top = 30.0
offset_right = 557.5
offset_bottom = 199.0
grow_horizontal = 2
texture = ExtResource("2_6d82g")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.444531
anchor_top = 0.376389
anchor_right = 0.555469
anchor_bottom = 0.876389
offset_left = -4.0
offset_top = -10.0
offset_right = 4.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 80)
layout_mode = 2
text = "Zagraj"

[node name="LevelsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 80)
layout_mode = 2
text = "Poziomy"

[node name="FullscreenButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 80)
layout_mode = 2
text = "Pełny Ekran/Okno"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(150, 80)
layout_mode = 2
text = "Wyjdź"

[node name="LevelSelectContainer" type="GridContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.55
anchor_right = 0.5
anchor_bottom = 0.55
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
columns = 5
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_right = 150.0
grow_vertical = 0
theme_override_constants/margin_left = 64
theme_override_constants/margin_bottom = 64

[node name="BackButton" type="Button" parent="MarginContainer"]
visible = false
custom_minimum_size = Vector2(150, 80)
layout_mode = 2
text = "Wróć"

[node name="Sprites" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="Sprites"]
position = Vector2(421, 540)
texture = ExtResource("3_dkd36")

[node name="Sprite2D2" type="Sprite2D" parent="Sprites"]
position = Vector2(893, 525)
texture = ExtResource("4_ha2rd")

[node name="Sprite2D3" type="Sprite2D" parent="Sprites"]
position = Vector2(189, 336)
texture = ExtResource("5_wdeli")

[node name="Sprite2D4" type="Sprite2D" parent="Sprites"]
position = Vector2(1142, 333)
texture = ExtResource("6_wyv1s")

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelsButton" to="." method="_on_levels_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FullscreenButton" to="." method="_on_fullscreen_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MarginContainer/BackButton" to="." method="_on_back_button_pressed"]
